# hybrid-nca-evocraft

./: LICENSE  README.md  clear.py  pyproject.toml  requirements.txt  run_2d.py  run_3d.py  train_2d.py  train_3d.py  visualize_nca.py
evo_ca/: __init__.py  models.py  training.py  training_3d.py  utils.py
models/: duck.pkl  elephant.pkl  owl.pkl  rabbit.pkl
